--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+body {
+    font-family: 'Courier New', Courier, monospace;
+    background-color: antiquewhite;
+    color: darkslateblue;
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    background-color: darkolivegreen;
+    color: antiquewhite;
+    padding: 20px 0px;
+    width: 30%;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 #main {
     display: flex;
     flex-direction: column;
@@ -29,4 +46,54 @@
 #game_over {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.game_over {
+    height: 100vh;
+    width: 100vw;
+}
+
+#prescreen {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    text-align: center;
+    width: 100vw;
+}
+
+#prescreen input {
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 5px;
+    height: 3%;
+    width: 18%;
+    text-align: center;
+    border-color: black;
+}
+
+#prescreen button {
+    margin: 25px;
+}
+
+#game_descript {
+    margin: 25px;
+}
+
+#user_scoreboard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#comp_scoreboard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
